tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_many_cases/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Missing cases: `C`, `D`, `E`, and 21 more not shown
  ┌─ src/main.nr:3:19
  │
3 │             match Abc::A {
  │                   ------
  │

Aborting due to 1 previous error
