tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_many_cases/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Missing cases: `C`, `D`, `E`, and 21 more not shown
  ┌─ src/main.nr:3:19
  │
3 │             match Abc::A {
  │                   ------
  │

Aborting due to 1 previous error
